--- a/index.html
+++ b/index.html
@@ -1,31 +1,298 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CodersLab</title>
-    <link href="style/style.css" rel="stylesheet">
-</head>
+<!-- saved from url=(0050)http://kursjs.pl/kurs/gry/hangman/hangman_game.php -->
+<html lang="pl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <title> Kurs Javascript - szubienica </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+    <script src="./jquery.min.js"></script><link href="./style/css" rel="stylesheet" type="text/css">
+    <style>
+        * {
+            box-sizing:border-box;
+        }
+
+        /* -------------------------------------------------- */
+        body {
+            background:#eee;
+        }
+
+        .page_container {
+            max-width:1600px;
+            min-width:1000px;
+        }
+        /* -------------------------------------------------- */
+        .plansza {
+            width:80%;
+            height:300px;
+            background:#fff;
+            border:1px solid #fff;
+            margin:20px auto;
+            position:relative;
+        }
+        /* -------------------------------------------------- */
+        .literki {
+            list-style-type:none;
+            margin:10px auto;
+            padding:0;
+            width:1200px;
+            text-align:center;
+        }
+
+        .literki li,
+        .literki li.disabled,
+        .literki li.disabled:hover,
+        .literki li.clicked,
+        .literki li.clicked:hover {
+            display:inline-block;
+            width: 70px;
+            height: 70px;
+            margin:5px;
+            cursor:pointer;
+            text-transform:uppercase;
+            font-size: 20px;
+            font-family: sans-serif;
+            color:#444;
+            text-align:center;
+            line-height:70px;
+            border:1px solid #ddd;
+            background: #fff;
+        }
+
+        .literki li.disabled,
+        .literki li.disabled:hover {
+            background: #eeeeee;
+            color:#ddd;
+            text-shadow:none;
+            cursor:default;
+        }
+
+        .literki li:hover {
+            background: #EC185D;
+            color:#fff;
+        }
+        /* -------------------------------------------------- */
+        .haslo {
+            position:absolute;
+            padding:0;
+            margin:0;
+            bottom:10px;
+            left:0;
+            width:100%;
+            text-align:center;
+        }
+
+        .haslo li {
+            text-transform: uppercase;
+            display: inline-block;
+            width: 70px;
+            height: 70px;
+            background: #fefefe;
+            border: 1px solid #ddd;
+            overflow: hidden;
+            margin: 5px;
+            font-size: 20px;
+            font-family: sans-serif;
+            color: #333;
+            text-align: center;
+            line-height: 70px;
+        }
+
+        .haslo li.space {
+            border: 0;
+            background: none;
+            box-shadow: none;
+        }
+        /* -------------------------------------------------- */
+        .proby {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 40px;
+            height: 40px;
+            font-size: 20px;
+            line-height: 50px;
+            display: block;
+            font-family: sans-serif;
+            color: #333;
+            text-align: center;
+        }
+
+        /* -------------------------------------------------- */
+        button.button,
+        input[type=button].button,
+        input[type=submit].button {
+            padding: 0.8em 3em;
+            background: #EC185D;
+            color: #FFF;
+            border: 0;
+            font-weight: bold;
+            border-radius: 4px;
+            transition: 0.5s background-color, 0.5s box-shadow;
+            cursor: pointer;
+            display: block;
+            font-size: 20px;
+            margin:30px auto;
+        }
+    </style><script>
+        (function() {
+            var aktualneHaslo = '';
+            var dostepneProby = 5;
+
+            //startujemy gre po kliknięciu na przycisk
+            function startGame() {
+                $.ajax({
+                    type     : "POST",
+                    url      : "hangman_server.php",
+                    data     : {
+                        action : 'startGame'
+                    },
+                    success : function(msg) {
+                        dostepneProby = 5;
+                        ustawHaslo(msg);
+                        pokazProby();
+                        ustawLiterki();
+                    }
+                });
+            }
+
+            //ustawiamy przyciski z literkami
+            function ustawLiterki() {
+                var $literki = $('.literki li');
+                $literki.unbind().removeClass('disabled');
+                $literki.bind('click',function() {
+                    var litera = $(this).text();
+                    check_letter(litera);
+                    disableButtons($(this));
+                })
+            }
+
+            //wylaczamy wszystkie przyciski
+            function disableButtons($guziki) {
+                $guziki.addClass('disabled').unbind();
+            }
+
+            //ustawiamy haslo
+            function ustawHaslo(haslo) {
+                aktualneHaslo = haslo.toUpperCase();
+                var $hasloList = $('.haslo');
+                $hasloList.empty();
+                var letters = aktualneHaslo.split('');
+                for (var i=0; i<letters.length; i++) {
+                    if (letters[i]==' ') {
+                        $hasloList.append('<li class="space"></li>')
+                    } else {
+                        $hasloList.append('<li></li>')
+                    }
+                }
+            }
+
+            function pokazProby() {
+                $('.proby').text(dostepneProby);
+            }
+
+            function gameOver() {
+                alert("Niestety nie udało ci się odgadnąć chasła. Ps: brzmi ono: \n\n" + aktualneHaslo);
+                disableButtons($('.literki li'));
+            }
+
+            function completeGame() {
+                alert('Udało ci się zgadnąć hasło :)');
+                disableButtons($('.literki li'));
+            }
+
+            function isMissingLetterExists() {
+
+                if ($('.haslo li').filter(function() {return ( !$(this).hasClass('space') && $(this).is(':empty') )? true: false}).length) {
+                    return true;
+
+                } else {
+                    return false;
+                }
+            }
+
+            function check_letter(litera) {
+                var literka = litera.toUpperCase();
+                if (aktualneHaslo.indexOf(literka)!=-1) {
+                    for (var i=0; i<aktualneHaslo.length; i++) {
+                        if (aktualneHaslo[i] == literka) {
+                            $('.haslo li').eq(i).html(litera)
+                        }
+                    }
+                    if (!isMissingLetterExists()) {
+                        completeGame();
+                    }
+                } else {
+                    //nie ma takiej litery
+                    dostepneProby--;
+                    pokazProby();
+
+                    if (dostepneProby <= 0) {
+                        gameOver();
+                    }
+                }
+            }
+
+//###########################################################
+            $(document).ready(function() {
+                $('#startGry').click(function() {
+                    startGame();
+                })
+
+            })
+        })();
+    </script></head>
+
+
 <body>
-
+<div class="page_container">
     <div class="plansza">
-        <div class="proby">
-        </div>
 
+        <div class="proby">
+
+        </div>
         <ul class="haslo">
+
         </ul>
     </div>
-
     <ul class="literki">
-        <?php
-            $alphabet = array('a','ą','b','c','ć','d','e','ę','f','g','h','i','j','k','l','ł','m','n','ń','o','ó','p','q','r','s','ś','t','u','v','w','x','y','z','ź','ż');
-            foreach ($alphabet as $letter) {
-                echo '<li>'.$letter."</li>\n";
-        }
-        ?>
+        <li class="disabled">a</li>
+        <li class="disabled">ą</li>
+        <li class="disabled">b</li>
+        <li class="disabled">c</li>
+        <li class="disabled">ć</li>
+        <li class="disabled">d</li>
+        <li class="disabled">e</li>
+        <li class="disabled">ę</li>
+        <li class="disabled">f</li>
+        <li class="disabled">g</li>
+        <li class="disabled">h</li>
+        <li class="disabled">i</li>
+        <li class="disabled">j</li>
+        <li class="disabled">k</li>
+        <li class="disabled">l</li>
+        <li class="disabled">ł</li>
+        <li class="disabled">m</li>
+        <li class="disabled">n</li>
+        <li class="disabled">ń</li>
+        <li class="disabled">o</li>
+        <li class="disabled">ó</li>
+        <li class="disabled">p</li>
+        <li class="disabled">q</li>
+        <li class="disabled">r</li>
+        <li class="disabled">s</li>
+        <li class="disabled">ś</li>
+        <li class="disabled">t</li>
+        <li class="disabled">u</li>
+        <li class="disabled">v</li>
+        <li class="disabled">w</li>
+        <li class="disabled">x</li>
+        <li class="disabled">y</li>
+        <li class="disabled">z</li>
+        <li class="disabled">ź</li>
+        <li class="disabled">ż</li>
     </ul>
 
-    <input type="button" value="Rozpocznij nową grę :)" id="startGry" />
+    <input type="button" class="button" value="Rozpocznij nową grę :)" id="startGry">
+</div>
 
-  <script src="js/app.js"></script>
-</body>
-</html>
+</body></html>
