--- a/index.html
+++ b/index.html
@@ -1,246 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0050)http://kursjs.pl/kurs/gry/hangman/hangman_game.php -->
-<html lang="pl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <html lang="pl"><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title> Kurs Javascript - szubienica </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-    <script src="./jquery.min.js"></script><link href="./style/css" rel="stylesheet" type="text/css">
-    <style>
-        * {
-            box-sizing:border-box;
-        }
-
-        /* -------------------------------------------------- */
-        body {
-            background:#eee;
-        }
-
-        .page_container {
-            max-width:1600px;
-            min-width:1000px;
-        }
-        /* -------------------------------------------------- */
-        .plansza {
-            width:80%;
-            height:300px;
-            background:#fff;
-            border:1px solid #fff;
-            margin:20px auto;
-            position:relative;
-        }
-        /* -------------------------------------------------- */
-        .literki {
-            list-style-type:none;
-            margin:10px auto;
-            padding:0;
-            width:1200px;
-            text-align:center;
-        }
-
-        .literki li,
-        .literki li.disabled,
-        .literki li.disabled:hover,
-        .literki li.clicked,
-        .literki li.clicked:hover {
-            display:inline-block;
-            width: 70px;
-            height: 70px;
-            margin:5px;
-            cursor:pointer;
-            text-transform:uppercase;
-            font-size: 20px;
-            font-family: sans-serif;
-            color:#444;
-            text-align:center;
-            line-height:70px;
-            border:1px solid #ddd;
-            background: #fff;
-        }
-
-        .literki li.disabled,
-        .literki li.disabled:hover {
-            background: #eeeeee;
-            color:#ddd;
-            text-shadow:none;
-            cursor:default;
-        }
-
-        .literki li:hover {
-            background: #EC185D;
-            color:#fff;
-        }
-        /* -------------------------------------------------- */
-        .haslo {
-            position:absolute;
-            padding:0;
-            margin:0;
-            bottom:10px;
-            left:0;
-            width:100%;
-            text-align:center;
-        }
-
-        .haslo li {
-            text-transform: uppercase;
-            display: inline-block;
-            width: 70px;
-            height: 70px;
-            background: #fefefe;
-            border: 1px solid #ddd;
-            overflow: hidden;
-            margin: 5px;
-            font-size: 20px;
-            font-family: sans-serif;
-            color: #333;
-            text-align: center;
-            line-height: 70px;
-        }
-
-        .haslo li.space {
-            border: 0;
-            background: none;
-            box-shadow: none;
-        }
-        /* -------------------------------------------------- */
-        .proby {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 40px;
-            height: 40px;
-            font-size: 20px;
-            line-height: 50px;
-            display: block;
-            font-family: sans-serif;
-            color: #333;
-            text-align: center;
-        }
-
-        /* -------------------------------------------------- */
-        button.button,
-        input[type=button].button,
-        input[type=submit].button {
-            padding: 0.8em 3em;
-            background: #EC185D;
-            color: #FFF;
-            border: 0;
-            font-weight: bold;
-            border-radius: 4px;
-            transition: 0.5s background-color, 0.5s box-shadow;
-            cursor: pointer;
-            display: block;
-            font-size: 20px;
-            margin:30px auto;
-        }
-    </style><script>
-        (function() {
-            var aktualneHaslo = '';
-            var dostepneProby = 5;
-
-            //startujemy gre po kliknięciu na przycisk
-            function startGame() {
-                $.ajax({
-                    type     : "POST",
-                    url      : "hangman_server.php",
-                    data     : {
-                        action : 'startGame'
-                    },
-                    success : function(msg) {
-                        dostepneProby = 5;
-                        ustawHaslo(msg);
-                        pokazProby();
-                        ustawLiterki();
-                    }
-                });
-            }
-
-            //ustawiamy przyciski z literkami
-            function ustawLiterki() {
-                var $literki = $('.literki li');
-                $literki.unbind().removeClass('disabled');
-                $literki.bind('click',function() {
-                    var litera = $(this).text();
-                    check_letter(litera);
-                    disableButtons($(this));
-                })
-            }
-
-            //wylaczamy wszystkie przyciski
-            function disableButtons($guziki) {
-                $guziki.addClass('disabled').unbind();
-            }
-
-            //ustawiamy haslo
-            function ustawHaslo(haslo) {
-                aktualneHaslo = haslo.toUpperCase();
-                var $hasloList = $('.haslo');
-                $hasloList.empty();
-                var letters = aktualneHaslo.split('');
-                for (var i=0; i<letters.length; i++) {
-                    if (letters[i]==' ') {
-                        $hasloList.append('<li class="space"></li>')
-                    } else {
-                        $hasloList.append('<li></li>')
-                    }
-                }
-            }
-
-            function pokazProby() {
-                $('.proby').text(dostepneProby);
-            }
-
-            function gameOver() {
-                alert("Niestety nie udało ci się odgadnąć chasła. Ps: brzmi ono: \n\n" + aktualneHaslo);
-                disableButtons($('.literki li'));
-            }
-
-            function completeGame() {
-                alert('Udało ci się zgadnąć hasło :)');
-                disableButtons($('.literki li'));
-            }
-
-            function isMissingLetterExists() {
-
-                if ($('.haslo li').filter(function() {return ( !$(this).hasClass('space') && $(this).is(':empty') )? true: false}).length) {
-                    return true;
-
-                } else {
-                    return false;
-                }
-            }
-
-            function check_letter(litera) {
-                var literka = litera.toUpperCase();
-                if (aktualneHaslo.indexOf(literka)!=-1) {
-                    for (var i=0; i<aktualneHaslo.length; i++) {
-                        if (aktualneHaslo[i] == literka) {
-                            $('.haslo li').eq(i).html(litera)
-                        }
-                    }
-                    if (!isMissingLetterExists()) {
-                        completeGame();
-                    }
-                } else {
-                    //nie ma takiej litery
-                    dostepneProby--;
-                    pokazProby();
-
-                    if (dostepneProby <= 0) {
-                        gameOver();
-                    }
-                }
-            }
-
-//###########################################################
-            $(document).ready(function() {
-                $('#startGry').click(function() {
-                    startGame();
-                })
-
-            })
-        })();
-    </script></head>
+    <script src="./jquery.min.js"></script><link href="./style/style.css" rel="stylesheet" type="text/css">
+    <script src="./js/app.js"></script>
+    </head>
 
 
 <body>
